--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -10,7 +10,7 @@ $breakpoints: (
 }
 
 @mixin tablet-only {
-  @media screen and (min-width: map-get($breakpoints, mobile)) {
+  @media screen and (min-width: map-get($breakpoints, mobile)) and (max-width: 970px) {
     @content;
   }
 }
